added the Cans file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="./objects/Particle.js"></script>
     <script src="./objects/Rect.js"></script>
     <script src="./objects/Books.js"></script>
+    <script src="./objects/Cans.js"></script>
+    <script src="./objects/Level.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
