added level selector

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
     </main>
-    <script src="./objects/Enums.js"></script>>
+    <script src="./objects/Enums.js"></script>
     <script src="./objects/Fader.js"></script>
     <script src="./objects/Timer.js"></script>
     <script src="./objects/Pallete.js"></script>
