added Plate file

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <script src="./objects/Pallete.js"></script>
     <script src="./objects/Particle.js"></script>
     <script src="./objects/Rect.js"></script>
+    <script src="./objects/Level.js"></script>
     <script src="./objects/Books.js"></script>
     <script src="./objects/Cans.js"></script>
-    <script src="./objects/Level.js"></script>
+    <script src="./objects/Plate.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
