got blueberries working

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./objects/Pallete.js"></script>
     <script src="./objects/Particle.js"></script>
     <script src="./objects/Rect.js"></script>
+    <script src="./objects/Circle.js"></script>
     <script src="./objects/Level.js"></script>
     <script src="./objects/Books.js"></script>
     <script src="./objects/Cans.js"></script>
