started on the Kitchen level

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="./objects/Books.js"></script>
     <script src="./objects/Cans.js"></script>
     <script src="./objects/Plate.js"></script>
+    <script src="./objects/Kitchen.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
