added a levels folder and the Cabinet class

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     <script src="./objects/Particle.js"></script>
     <script src="./objects/Rect.js"></script>
     <script src="./objects/Circle.js"></script>
-    <script src="./objects/Level.js"></script>
-    <script src="./objects/Books.js"></script>
-    <script src="./objects/Cans.js"></script>
-    <script src="./objects/Plate.js"></script>
-    <script src="./objects/Kitchen.js"></script>
+    
+    <script src="./objects/levels/Level.js"></script>
+    <script src="./objects/levels/Books.js"></script>
+    <script src="./objects/levels/Cans.js"></script>
+    <script src="./objects/levels/Plate.js"></script>
+    <script src="./objects/levels/Kitchen.js"></script>
+    <script src="./objects/levels/Cabinet.js"></script>
+    
     <script src="sketch.js"></script>
   </body>
 </html>
