made progress on Cabinet class

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
     </main>
+    <!-- OBJECTS -->
     <script src="./objects/Enums.js"></script>
     <script src="./objects/Fader.js"></script>
     <script src="./objects/Timer.js"></script>
@@ -17,14 +18,16 @@
     <script src="./objects/Particle.js"></script>
     <script src="./objects/Rect.js"></script>
     <script src="./objects/Circle.js"></script>
-    
+    <script src="./objects/Img.js"></script>
+    <!-- LEVELS -->
     <script src="./objects/levels/Level.js"></script>
     <script src="./objects/levels/Books.js"></script>
     <script src="./objects/levels/Cans.js"></script>
     <script src="./objects/levels/Plate.js"></script>
     <script src="./objects/levels/Kitchen.js"></script>
     <script src="./objects/levels/Cabinet.js"></script>
-    
+    <!-- SKETCH -->
     <script src="sketch.js"></script>
+  
   </body>
 </html>
